--- a/04.open-source-ml/02.linux.md
+++ b/04.open-source-ml/02.linux.md
@@ -2,6 +2,12 @@
 
 ## Contents <!-- omit in toc -->
 
+- [Operating System Basics](#operating-system-basics)
+- [Linux Distribution](#linux-distribution)
+  - [Linux Kernel](#linux-kernel)
+  - [GNU Project](#gnu-project)
+- [References](#references)
+- [More Links](#more-links)
 
 ## Operating System Basics
 
@@ -51,6 +57,6 @@ The GNU Project is a free software, mass collaboration project that Richard Stal
 - https://en.wikipedia.org/wiki/List_of_Linux_distributions
 
 
-## Agenda
+## Agenda <!-- omit in toc -->
 
 <!-- TODO -->
