--- a/04.open-source-ml/03.containers.md
+++ b/04.open-source-ml/03.containers.md
@@ -2,6 +2,19 @@
 
 ## Contents <!-- omit in toc -->
 
+- [OS-level virtualization](#os-level-virtualization)
+  - [cgroups](#cgroups)
+  - [Namespaces](#namespaces)
+- [Docker](#docker)
+  - [Docker Architecture](#docker-architecture)
+  - [Docker Hub](#docker-hub)
+- [Demo](#demo)
+  - [Bash](#bash)
+  - [Simple Web App](#simple-web-app)
+    - [Host's port binding](#hosts-port-binding)
+  - [Docker-Compose Mongo in isolated network](#docker-compose-mongo-in-isolated-network)
+- [References](#references)
+- [More Links](#more-links)
 
 ## OS-level virtualization
 
@@ -9,14 +22,13 @@ OS-level virtualization is an operating system (OS) paradigm in which the kernel
 
 Such instances may look like real computers from the point of view of programs running in them.
 A computer program running on an ordinary operating system can see all resources (connected devices, files and folders, network shares, CPU power, quantifiable hardware capabilities) of that computer.
-However, programs running inside of a container can only see the container's contents and devices assigned to the container. 
+However, programs running inside of a container can only see the container's contents and devices assigned to the container.
 
 Linux containers are all based on the virtualization, isolation, and resource management mechanisms provided by the Linux kernel, notably Linux namespaces and cgroups.
 
 ### cgroups
 
 cgroups (abbreviated from `control groups`) is a Linux kernel feature that limits, accounts for, and isolates the resource usage (CPU, memory, disk I/O, network, etc.) of a collection of processes.
-
 
 ### Namespaces
 
@@ -27,8 +39,7 @@ Examples of such resources are process IDs, hostnames, user IDs, file names, and
 Since kernel version 5.6, there are 8 kinds of namespaces.
 Namespace functionality is the same across all kinds: each process is associated with a namespace and can only see or use the resources associated with that namespace, and descendant namespaces where applicable.
 This way each process (or process group thereof) can have a unique view on the resources.
-Which resource is isolated depends on the kind of namespace that has been created for a given process group. 
-
+Which resource is isolated depends on the kind of namespace that has been created for a given process group.
 
 - Mount (mnt): Mount namespaces control mount points.
 - Process ID (pid): The PID namespace provides processes with an independent set of process IDs (PIDs) from other namespaces
@@ -38,7 +49,6 @@ Which resource is isolated depends on the kind of namespace that has been create
 - User ID (user): User namespaces are a feature to provide both privilege isolation and user identification segregation across multiple sets of processes
 - Control group (cgroup) Namespace: The cgroup namespace type hides the identity of the control group of which process is a member
 - Time Namespace: The time namespace allows processes to see different system times in a way similar to the UTS namespace
-
 
 ## Docker
 
@@ -67,12 +77,10 @@ Another Docker client is Docker Compose, that lets you work with applications co
 
 ![image](https://docs.docker.com/engine/images/architecture.svg)
 
-
 ### Docker Hub
 
 Docker Hub is a service provided by Docker for finding and sharing container images with your team.
 It is the world’s largest repository of container images with an array of content sources including container community developers, open source projects and independent software vendors (ISV) building and distributing their code in containers.
-
 
 ## Demo
 
@@ -156,7 +164,7 @@ user@myhost $ docker logs unina-nginx-demo-local # to see the process logs
 ### Docker-Compose Mongo in isolated network
 
 ```yaml
-version: '3'
+version: "3"
 services:
   mongo:
     image: mongo:latest
@@ -192,7 +200,6 @@ networks:
 - https://docs.docker.com/engine/
 - https://docs.docker.com/docker-hub/
 
-
 ## More Links
 
 - https://docs.docker.com/engine/install/
@@ -201,7 +208,6 @@ networks:
 - https://docs.microsoft.com/en-us/learn/browse/?terms=containers
 - https://hub.docker.com/
 
-
-## Agenda
+## Agenda <!-- omit in toc -->
 
 <!-- TODO -->
