--- a/04.open-source-ml/04.orchestrators.md
+++ b/04.open-source-ml/04.orchestrators.md
@@ -2,6 +2,12 @@
 
 ## Contents <!-- omit in toc -->
 
+- [Container Orchestrators](#container-orchestrators)
+- [Kubernetes](#kubernetes)
+  - [Why you need Kubernetes and what it can do](#why-you-need-kubernetes-and-what-it-can-do)
+- [References](#references)
+- [More Links](#more-links)
+
 ## Container Orchestrators
 
 Container orchestration automates and simplifies provisioning, and deployment and management of containerized applications.
@@ -55,6 +61,6 @@ Kubernetes provides you with:
 - https://kubernetes.io/
 - https://www.katacoda.com/
 
-## Agenda
+## Agenda <!-- omit in toc -->
 
 <!-- TODO -->
