--- a/04.open-source-ml/05.kubernetes.md
+++ b/04.open-source-ml/05.kubernetes.md
@@ -2,6 +2,35 @@
 
 ## Contents <!-- omit in toc -->
 
+- [Install Tools](#install-tools)
+  - [kubectl](#kubectl)
+  - [kind](#kind)
+  - [Docker Desktop](#docker-desktop)
+  - [Minikube](#minikube)
+  - [k3s](#k3s)
+- [Managed instances](#managed-instances)
+  - [AKS](#aks)
+- [Demo](#demo)
+  - [Create a local cluster for development with kind](#create-a-local-cluster-for-development-with-kind)
+- [Kubernetes Components](#kubernetes-components)
+  - [Control Plane](#control-plane)
+    - [kube-apiserver](#kube-apiserver)
+    - [etcd](#etcd)
+    - [kube-scheduler](#kube-scheduler)
+    - [kube-controller-manager](#kube-controller-manager)
+    - [cloud-controller-manager](#cloud-controller-manager)
+- [Kubernetes Objects](#kubernetes-objects)
+  - [Namespaces](#namespaces)
+    - [Demo](#demo-1)
+  - [Pods](#pods)
+    - [Demo](#demo-2)
+  - [Service](#service)
+  - [Volumes](#volumes)
+  - [ConfigMaps](#configmaps)
+  - [Secrets](#secrets)
+- [References](#references)
+- [More Links](#more-links)
+
 ## Install Tools
 
 ### kubectl
@@ -56,7 +85,7 @@ docker ps -a
 
 ![image](./images/05.kubernetes/01.local-cluster-kind.jpg)
 
-# Kubernetes Components
+## Kubernetes Components
 
 A Kubernetes cluster consists of a set of worker machines, called nodes, that run containerized applications. Every cluster has at least one worker node.
 
@@ -65,29 +94,29 @@ In production environments, the control plane usually runs across multiple compu
 
 ![image](https://d33wubrfki0l68.cloudfront.net/2475489eaf20163ec0f54ddc1d92aa8d4c87c96b/e7c81/images/docs/components-of-kubernetes.svg)
 
-## Control Plane
+### Control Plane
 
 The control plane's components make global decisions about the cluster (for example, scheduling), as well as detecting and responding to cluster events (for example, starting up a new pod when a deployment's replicas field is unsatisfied).
 
-### kube-apiserver
+#### kube-apiserver
 
 The API server is a component of the Kubernetes control plane that exposes the Kubernetes API.
 The API server is the front end for the Kubernetes control plane.
 
-### etcd
+#### etcd
 
 Consistent and highly-available key value store used as Kubernetes' backing store for all cluster data.
 
-### kube-scheduler
+#### kube-scheduler
 
 Control plane component that watches for newly created Pods with no assigned node, and selects a node for them to run on.
 
-### kube-controller-manager
+#### kube-controller-manager
 
 Control plane component that runs controller processes.
 Controllers are control loops that watch the state of your cluster, then make or request changes where needed. Each controller tries to move the current cluster state closer to the desired state.
 
-### cloud-controller-manager
+#### cloud-controller-manager
 
 A Kubernetes control plane component that embeds cloud-specific control logic.
 The cloud controller manager lets you link your cluster into your cloud provider's API, and separates out the components that interact with that cloud platform from components that only interact with your cluster.
@@ -210,7 +239,7 @@ Pods can consume ConfigMaps as environment variables, command-line arguments, or
 
 A ConfigMap allows you to decouple environment-specific configuration from your container images, so that your applications are easily portable.
 
-:warning: ConfigMap does not provide secrecy or encryption. If the data you want to store are confidential, use a Secret rather than a ConfigMap, or use additional (third party) tools to keep your data private.  :warning: 
+:warning: ConfigMap does not provide secrecy or encryption. If the data you want to store are confidential, use a Secret rather than a ConfigMap, or use additional (third party) tools to keep your data private. :warning:
 
 ### Secrets
 
@@ -242,6 +271,6 @@ Secrets are similar to ConfigMaps but are specifically intended to hold confiden
 - https://github.com/ahmetb/kubectx
 -
 
-## Agenda
+## Agenda <!-- omit in toc -->
 
 <!-- TODO -->
