--- a/04.open-source-ml/01.presentation.md
+++ b/04.open-source-ml/01.presentation.md
@@ -11,18 +11,60 @@ Since 1985 [Proge-Software](https://www.progesoftware.it/) produces high-technol
 
 ## Agenda
 
-1. [Presentation](01.presentation.md) :clock9: **(09:00)**
-   - Who Am I
-2. [Linux](02.linux.md) **(09:15)**
-   1. Kernel
-   2. cgroups
-   3. namespaces
-3. Containers 30'
-   1. Docker
-   2. Demo
-4. Orchestrators 30'
-5. Kubernetes
-   1. Demo
-6. Kubeflow
-   1. Demo
-7. [Q&A](06.q&a.md) **(10:55)**
+1. [Linux](02.linux.md)
+   - Operating System Basics
+   - Linux Distribution
+     - Linux Kernel
+     - GNU Project
+2. [Containers](03.containers.md)
+   - OS-level virtualization
+     - cgroups
+     - Namespaces
+   - Docker
+     - Docker Architecture
+     - Docker Hub
+   - Demo
+     - Bash
+     - Simple Web App
+       - Host's port binding
+     - Docker-Compose Mongo in isolated network
+3. [Orchestrators](04.orchestrators.md)
+   - Container Orchestrators
+   - Kubernetes
+     - Why you need Kubernetes and what it can do
+4. [Kubernetes](05.kubernetes.md)
+   - Install Tools
+     - kubectl
+     - kind
+     - Docker Desktop
+     - Minikube
+     - k3s
+   - Managed instances
+     - AKS
+   - Demo
+     - Create a local cluster for development with kind
+   - Kubernetes Components
+     - Control Plane
+       - kube-apiserver
+       - etcd
+       - kube-scheduler
+       - kube-controller-manager
+       - cloud-controller-manager
+   - Kubernetes Objects
+     - Namespaces
+       - Demo
+     - Pods
+       - Demo
+     - Service
+     - Volumes
+     - ConfigMaps
+     - Secrets
+5. [Kubeflow](06.kubeflow.md)
+   - Kubeflow
+     - Architecture
+     - ML Workflow
+     - Kubeflow components in the ML workflow
+   - Demo
+     - Prerequisites
+     - Demo
+6. [Q&A](06.q&a.md)
