--- a/04.open-source-ml/06.kubeflow.md
+++ b/04.open-source-ml/06.kubeflow.md
@@ -2,6 +2,16 @@
 
 ## Contents <!-- omit in toc -->
 
+- [Kubeflow](#kubeflow)
+  - [Architecture](#architecture)
+  - [ML Workflow](#ml-workflow)
+  - [Kubeflow components in the ML workflow](#kubeflow-components-in-the-ml-workflow)
+- [Demo](#demo)
+  - [Prerequisites](#prerequisites)
+  - [Demo](#demo-1)
+- [References](#references)
+- [More Links](#more-links)
+
 ## Kubeflow
 
 The Kubeflow project is dedicated to making deployments of machine learning (ML) workflows on Kubernetes simple, portable and scalable.
@@ -58,7 +68,6 @@ The next diagram adds Kubeflow to the workflow, showing which Kubeflow component
 
 <!-- TODO -->
 
-
 ## References
 
 - https://www.kubeflow.org/docs/started/introduction/
@@ -66,6 +75,6 @@ The next diagram adds Kubeflow to the workflow, showing which Kubeflow component
 
 ## More Links
 
-## Agenda
+## Agenda <!-- omit in toc -->
 
 <!-- TODO -->
