--- a/04.open-source-ml/06.kubeflow.md
+++ b/04.open-source-ml/06.kubeflow.md
@@ -77,4 +77,9 @@ The next diagram adds Kubeflow to the workflow, showing which Kubeflow component
 
 ## Agenda <!-- omit in toc -->
 
-<!-- TODO -->
+1. [Linux](02.linux.md)
+2. [Containers](03.containers.md)
+3. [Orchestrators](04.orchestrators.md)
+4. [Kubernetes](05.kubernetes.md)
+5. [**Kubeflow**](06.kubeflow.md)
+6. [Q&A](07.q&a.md)
