--- a/04.open-source-ml/02.linux.md
+++ b/04.open-source-ml/02.linux.md
@@ -59,4 +59,9 @@ The GNU Project is a free software, mass collaboration project that Richard Stal
 
 ## Agenda <!-- omit in toc -->
 
-<!-- TODO -->
+1. [**Linux**](02.linux.md)
+2. [Containers](03.containers.md)
+3. [Orchestrators](04.orchestrators.md)
+4. [Kubernetes](05.kubernetes.md)
+5. [Kubeflow](06.kubeflow.md)
+6. [Q&A](07.q&a.md)
