--- a/04.open-source-ml/05.kubernetes.md
+++ b/04.open-source-ml/05.kubernetes.md
@@ -273,4 +273,10 @@ Secrets are similar to ConfigMaps but are specifically intended to hold confiden
 
 ## Agenda <!-- omit in toc -->
 
-<!-- TODO -->
+1. [Linux](02.linux.md)
+2. [Containers](03.containers.md)
+3. [Orchestrators](04.orchestrators.md)
+4. [**Kubernetes**](05.kubernetes.md)
+5. [Kubeflow](06.kubeflow.md)
+6. [Q&A](07.q&a.md)
+
