--- a/04.open-source-ml/06.kubeflow.md
+++ b/04.open-source-ml/06.kubeflow.md
@@ -6,6 +6,8 @@
   - [Architecture](#architecture)
   - [ML Workflow](#ml-workflow)
   - [Kubeflow components in the ML workflow](#kubeflow-components-in-the-ml-workflow)
+- [Kubeflow Pipelines](#kubeflow-pipelines)
+  - [What is a Pipeline?](#what-is-a-pipeline)
 - [Demo](#demo)
   - [Prerequisites](#prerequisites)
   - [Demo](#demo-1)
@@ -57,6 +59,35 @@ In the production phase, you deploy a system that performs the following process
 The next diagram adds Kubeflow to the workflow, showing which Kubeflow components are useful at each stage:
 
 ![image](https://www.kubeflow.org/docs/images/kubeflow-overview-workflow-diagram-2.svg)
+
+## Kubeflow Pipelines
+
+Kubeflow Pipelines is a platform for building and deploying portable, scalable machine learning (ML) workflows based on Docker containers.
+
+The Kubeflow Pipelines platform consists of:
+
+- A user interface (UI) for managing and tracking experiments, jobs, and runs.
+- An engine for scheduling multi-step ML workflows.
+- An SDK for defining and manipulating pipelines and components.
+- Notebooks for interacting with the system using the SDK.
+
+The following are the goals of Kubeflow Pipelines:
+
+- End-to-end orchestration: enabling and simplifying the orchestration of machine learning pipelines.
+- Easy experimentation: making it easy for you to try numerous ideas and techniques and manage your various trials/experiments.
+- Easy re-use: enabling you to re-use components and pipelines to quickly create end-to-end solutions without having to rebuild each time.
+
+### What is a Pipeline?
+
+A pipeline is a description of an ML workflow, including all of the components in the workflow and how they combine in the form of a graph.
+The pipeline includes the definition of the inputs (parameters) required to run the pipeline and the inputs and outputs of each component.
+
+After developing your pipeline, you can upload and share it on the Kubeflow Pipelines UI.
+
+A pipeline component is a self-contained set of user code, packaged as a Docker image, that performs one step in the pipeline.
+For example, a component can be responsible for data preprocessing, data transformation, model training, and so on.
+
+
 
 ## Demo
 
