--- a/04.open-source-ml/01.presentation.md
+++ b/04.open-source-ml/01.presentation.md
@@ -9,6 +9,26 @@ Since 1985 [Proge-Software](https://www.progesoftware.it/) produces high-technol
 - LinkedIn: https://www.linkedin.com/company/proge-software/
 
 
+## Francesco Ilario
+
+- Name: Francesco Ilario
+- Role: Cloud Solution Architect
+    - Distributed Systems, Cloud Native Architectures, Kubernetes, Docker
+    - DevOps, Automation, CI/CD, IaC
+
+- LinkedIn: https://www.linkedin.com/in/filario/
+
+
+## Alberto Mollica Graziano
+
+- Name: Alberto Mollica Graziano
+- Role: Data Scientist
+    - ETL and Data Warehouse with Synapse
+    - Analytics with PowerBI and Azure Analysis Services
+
+- LinkedIn: https://www.linkedin.com/in/alberto-mollica-graziano/
+
+
 ## Agenda
 
 1. [Linux](02.linux.md)
