--- a/04.open-source-ml/05.kubernetes.md
+++ b/04.open-source-ml/05.kubernetes.md
@@ -203,8 +203,7 @@ EOF
 You can use port forward to proxy to the service
 
 ```bash
-kubectl port-forward s
-ervice/nginx-service 8080:80
+kubectl port-forward service/nginx-service 8080:80
 
 # navigate http://localhost:8080 and you will have the page served by the pod through the service
 
