--- a/04.open-source-ml/06.kubeflow.md
+++ b/04.open-source-ml/06.kubeflow.md
@@ -87,7 +87,33 @@ After developing your pipeline, you can upload and share it on the Kubeflow Pipe
 A pipeline component is a self-contained set of user code, packaged as a Docker image, that performs one step in the pipeline.
 For example, a component can be responsible for data preprocessing, data transformation, model training, and so on.
 
+### What is Kubeflow Notebook?
 
+Kubeflow Notebooks provides a way to run web-based development environments inside your Kubernetes cluster by running them inside Pods.
+
+Some key features include:
+- Native support for JupyterLab, RStudio, and Visual Studio Code (code-server).
+- Users can create notebook containers directly in the cluster, rather than locally on their workstations.
+- Admins can provide standard notebook images for their organization with required packages pre-installed.
+- Access control is managed by Kubeflow’s RBAC, enabling easier notebook sharing across the organization.
+
+
+### What are Kubeflow Models?
+![image](https://www.kubeflow.org/docs/external-add-ons/kserve/pics/kserve.png)
+
+KServe enables serverless inferencing on Kubernetes and provides performant, high abstraction interfaces for common machine learning (ML) frameworks like TensorFlow, XGBoost, scikit-learn, PyTorch, and ONNX to solve production model serving use cases.
+
+### What are Kubeflow Experiments?
+- Auto ML Experiments:
+  - Katib is a Kubernetes-native project for automated machine learning (AutoML). Katib supports hyperparameter tuning, early stopping and neural architecture search (NAS). Learn more about AutoML at fast.ai, Google Cloud, Microsoft Azure or Amazon SageMaker.
+
+- KFP Experiments:
+  - The Kubeflow Pipelines platform consists of:
+
+    - A user interface (UI) for managing and tracking experiments, jobs, and runs.
+    - An engine for scheduling multi-step ML workflows.
+    - An SDK for defining and manipulating pipelines and components.
+    - Notebooks for interacting with the system using the SDK.
 
 ## Demo
 
@@ -103,6 +129,10 @@ For example, a component can be responsible for data preprocessing, data transfo
 
 - https://www.kubeflow.org/docs/started/introduction/
 - https://www.kubeflow.org/docs/started/architecture/
+- https://www.kubeflow.org/docs/external-add-ons/kserve/kserve/
+- https://www.kubeflow.org/docs/components/katib/overview/
+- https://www.kubeflow.org/docs/components/notebooks/overview/
+- https://www.kubeflow.org/docs/components/pipelines/introduction/
 
 ## More Links
 
