--- a/04.open-source-ml/01.presentation.md
+++ b/04.open-source-ml/01.presentation.md
@@ -81,6 +81,8 @@ Since 1985 [Proge-Software](https://www.progesoftware.it/) produces high-technol
      - Architecture
      - ML Workflow
      - Kubeflow components in the ML workflow
+   - Kubeflow Pipelines
+     - What is a Pipeline?
    - Demo
      - Prerequisites
      - Demo
