--- a/04.open-source-ml/05.kubernetes.md
+++ b/04.open-source-ml/05.kubernetes.md
@@ -24,6 +24,7 @@
     - [Demo](#demo-1)
   - [Pods](#pods)
     - [Demo](#demo-2)
+- [Deployment](#deployment)
   - [Service](#service)
   - [Volumes](#volumes)
   - [ConfigMaps](#configmaps)
@@ -172,6 +173,61 @@ kubectl get pod -w nginx
 kubectl port-forward pod/nginx 8080:80
 
 # navigate http://localhost:8080 and you will have the page served by the pod
+xdg-open http://localhost:8080
+
+# cleanup
+kubectl delete pod nginx
+```
+
+## Deployment
+
+A Deployment provides declarative updates for Pods and ReplicaSets.
+
+You describe a desired state in a Deployment, and the Deployment Controller changes the actual state to the desired state at a controlled rate.
+You can define Deployments to create new ReplicaSets, or to remove existing Deployments and adopt all their resources with new Deployments.
+
+```bash
+cat << EOF | kubectl apply -f -
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx-deployment
+  labels:
+    app: nginx
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+        - name: nginx
+          image: nginx:latest
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 80
+              name: http-web-svc
+          resources:
+            requests:
+              cpu: 200m
+              memory: 20M
+            limits:
+              cpu: 2000m
+              memory: 200M
+EOF
+
+# test traffic
+kubectl port-forward service/nginx-service 8080:80
+
+# in a new shell monitor pods
+kubectl get pod -w
+
+# delete pods and look for automatic deploy of new ones
+kubectl delete pod --selector app=nginx
 ```
 
 ### Service
@@ -259,6 +315,7 @@ Secrets are similar to ConfigMaps but are specifically intended to hold confiden
 - https://kubernetes.io/docs/reference/kubectl/
 - https://kubernetes.io/docs/concepts/overview/components/
 - https://kubernetes.io/docs/concepts/overview/working-with-objects/
+- https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
 - https://kubernetes.io/docs/concepts/storage/volumes/
 - https://kubernetes.io/docs/concepts/configuration/configmap/
 - https://kubernetes.io/docs/concepts/configuration/secret/
@@ -277,4 +334,3 @@ Secrets are similar to ConfigMaps but are specifically intended to hold confiden
 4. [**Kubernetes**](05.kubernetes.md)
 5. [Kubeflow](06.kubeflow.md)
 6. [Q&A](07.q&a.md)
-
