--- a/02.azure-and-iot/03.azure-iot.md
+++ b/02.azure-and-iot/03.azure-iot.md
@@ -3,6 +3,7 @@
 ## Contents <!-- omit in toc -->
 
 - [Azure IoT Hub](#azure-iot-hub)
+- [Azure IoT Hub Device Provisioning Service](#azure-iot-hub-device-provisioning-service)
 - [Azure IoT Hub Edge](#azure-iot-hub-edge)
 - [Azure Digital Twins](#azure-digital-twins)
 - [Azure IoT Central](#azure-iot-central)
@@ -20,6 +21,21 @@ Almost any device can be connected to an IoT hub.
 
 Several messaging patterns are supported, including device-to-cloud telemetry, uploading files from devices, and request-reply methods to control your devices from the cloud.
 IoT Hub also supports monitoring to help you track device creation, device connections, and device failures.
+
+## Azure IoT Hub Device Provisioning Service
+
+The IoT Hub Device Provisioning Service (DPS) is a helper service for IoT Hub that enables zero-touch, just-in-time provisioning to the right IoT hub without requiring human intervention.
+DPS enables the provisioning of millions of devices in a secure and scalable manner.
+
+There are many provisioning scenarios in which DPS is an excellent choice for getting devices connected and configured to IoT Hub, such as:
+
+- Zero-touch provisioning to a single IoT solution without hardcoding IoT Hub connection information at the factory (initial setup)
+- Load-balancing devices across multiple hubs
+- Connecting devices to their owner's IoT solution based on sales transaction data (multitenancy)
+- Connecting devices to a particular IoT solution depending on use-case (solution isolation)
+- Connecting a device to the IoT hub with the lowest latency (geo-sharding)
+- Reprovisioning based on a change in the device
+- Rolling the keys used by the device to connect to IoT Hub (when not using X.509 certificates to connect)
 
 ## Azure IoT Hub Edge
 
@@ -113,6 +129,7 @@ We also leverage hardware cryptographic capabilities, memory protection via Thre
 - https://docs.microsoft.com/en-us/azure-sphere/product-overview/what-is-azure-sphere
 - https://azure.microsoft.com/en-us/services/rtos/
 - https://docs.microsoft.com/en-us/azure/rtos/overview-rtos
+- https://docs.microsoft.com/en-us/azure/iot-dps/about-iot-dps
 
 ## More Links
 
