--- a/02.azure-and-iot/04.azure-iot-hub.md
+++ b/02.azure-and-iot/04.azure-iot-hub.md
@@ -11,6 +11,7 @@
     - [Desired properties Example](#desired-properties-example)
     - [Back-end operations](#back-end-operations)
     - [Device operations](#device-operations)
+  - [Module Twins](#module-twins)
 - [References](#references)
 - [More Links](#more-links)
 
@@ -131,14 +132,34 @@ The device app operates on the device twin using the following atomic operations
 - **Partially update reported properties**. This operation enables the partial update of the reported properties of the currently connected device. This operation uses the same JSON update format that the solution back end uses for a partial update of desired properties.
 - **Observe desired properties**. The currently connected device can choose to be notified of updates to the desired properties when they happen. The device receives the same form of update (partial or full replacement) executed by the solution back end.
 
+### Module Twins
+
+In IoT Hub, under each device identity, you can create up to 50 module identities.
+Each module identity implicitly generates a module twin.
+Similar to device twins, module twins are JSON documents that store module state information including metadata, configurations, and conditions.
+Azure IoT Hub maintains a module twin for each module that you connect to IoT Hub.
+
+On the device side, the IoT Hub device SDKs enable you to create modules where each one opens an independent connection to IoT Hub.
+This functionality enables you to use separate namespaces for different components on your device.
+For example, you have a vending machine that has three different sensors.
+Each sensor is controlled by different departments in your company.
+You can create a module for each sensor.
+This way, each department is only able to send jobs or direct methods to the sensor that they control, avoiding conflicts and user errors.
+
+Module identity and module twin provide the same capabilities as device identity and device twin but at a finer granularity.
+This finer granularity enables capable devices, such as operating system-based devices or firmware devices managing multiple components, to isolate configuration and conditions for each of those components.
+Module identity and module twins provide a management separation of concerns when working with IoT devices that have modular software components.
+We aim at supporting all the device twin functionality at module twin level by module twin general availability.
+
 ## References
 
 - https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-devguide-messages-c2d
 - https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-devguide-c2d-guidance
+- https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-devguide-device-twins
+- https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-devguide-module-twins
 
 ## More Links
 
-- https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-devguide-device-twins
 - https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-devguide-query-language
 - https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-devguide-jobs
 - https://docs.microsoft.com/en-us/azure/iot-hub/tutorial-device-twins
