--- a/02.azure-and-iot/02.iot.md
+++ b/02.azure-and-iot/02.iot.md
@@ -18,6 +18,9 @@
     - [Military applications](#military-applications)
     - [Ocean of Things](#ocean-of-things)
   - [Architecture](#architecture)
+  - [Messaging Protocols](#messaging-protocols)
+    - [AMQP](#amqp)
+    - [MQTT](#mqtt)
 - [References](#references)
 
 ## IoT
@@ -108,7 +111,6 @@ It is heavily influenced by the future prospects of warfare in an urban environm
 The Ocean of Things project is a DARPA-led program designed to establish an Internet of things across large ocean areas for the purposes of collecting, monitoring, and analyzing environmental and vessel activity data.
 The project entails the deployment of about 50,000 floats that house a passive sensor suite that autonomously detect and track military and commercial vessels as part of a cloud-based network.
 
-
 ### Architecture
 
 IoT system architecture, in its simplistic view, consists of three tiers: Tier 1: Devices, Tier 2: the Edge Gateway, and Tier 3: the Cloud.
@@ -123,9 +125,27 @@ It includes various database systems that store sensor data, such as time series
 The cloud tier in most cloud-based IoT system features event queuing and messaging system that handles communication that transpires in all tiers.
 Some experts classified the three-tiers in the IoT system as edge, platform, and enterprise and these are connected by proximity network, access network, and service network, respectively.
 
+### Messaging Protocols
+
+#### AMQP
+
+The Advanced Message Queuing Protocol (AMQP) is an open standard application layer protocol for message-oriented middleware.
+The defining features of AMQP are message orientation, queuing, routing (including point-to-point and publish-and-subscribe), reliability and security.
+
+AMQP is a binary, application layer protocol, designed to efficiently support a wide variety of messaging applications and communication patterns.
+It provides flow controlled, message-oriented communication with message-delivery guarantees such as at-most-once (where each message is delivered once or never), at-least-once (where each message is certain to be delivered, but may do so multiple times) and exactly-once (where the message will always certainly arrive and do so only once), and authentication and/or encryption based on SASL and/or TLS.
+It assumes an underlying reliable transport layer protocol such as Transmission Control Protocol (TCP).
+
+#### MQTT
+
+MQTT is an OASIS standard messaging protocol for the Internet of Things (IoT).
+It is designed as an extremely lightweight publish/subscribe messaging transport that is ideal for connecting remote devices with a small code footprint and minimal network bandwidth.
+MQTT today is used in a wide variety of industries, such as automotive, manufacturing, telecommunications, oil and gas, etc.
 
 ## References
 
 - https://en.wikipedia.org/wiki/Internet_of_things
 - https://en.wikipedia.org/wiki/Internet_of_Military_Things
 - https://azure.microsoft.com/en-us/overview/internet-of-things-iot/what-is-the-internet-of-things/
+- https://en.wikipedia.org/wiki/Advanced_Message_Queuing_Protocol
+- https://mqtt.org/
