--- a/02.azure-and-iot/01.presentation.md
+++ b/02.azure-and-iot/01.presentation.md
@@ -4,8 +4,9 @@
 
 - Name: Francesco Ilario
 - Role: Cloud Solution Architect
-    - Distributed Systems, Cloud Native Architectures, IoT
-    - DevOps, CI/CD, IaC
+
+  - Distributed Systems, Cloud Native Architectures, IoT
+  - DevOps, CI/CD, IaC
 
 - LinkedIn: https://www.linkedin.com/in/filario/
 
@@ -13,8 +14,9 @@
 
 - Name: Alberto Mollica Graziano
 - Role: Data Scientist
-    - ETL and Data Warehouse with Synapse
-    - Analytics with PowerBI and Azure Analysis Services
+
+  - ETL and Data Warehouse with Synapse
+  - Analytics with PowerBI and Azure Analysis Services
 
 - LinkedIn: https://www.linkedin.com/in/alberto-mollica-graziano/
 
@@ -28,4 +30,60 @@ Since 1985 [Proge-Software](https://www.progesoftware.it/) produces high-technol
 
 ## Agenda
 
+1. [IoT](02.iot.md)
+   - IoT
+     - Applications
+       - Consumer applications
+       - Medical and healthcare
+       - Transportation
+       - V2X communications
+       - Building and home automation
+       - Manufacturing
+       - Agriculture
+       - Maritime
+       - Metropolitan scale deployments
+       - Energy management
+       - Environmental monitoring
+       - Military applications
+       - Ocean of Things
+     - Architecture
+     - Messaging Protocols
+       - AMQP
+       - MQTT
+1. [Azure IoT](03.azure-iot.md)
+   - Azure IoT Hub
+   - Azure IoT Hub Device Provisioning Service
+   - Azure IoT Hub Edge
+   - Azure Digital Twins
+   - Azure IoT Central
+   - Azure Sphere
+     - Hardware architecture
+   - Azure RTOS
+1. [Azure IoT Hub](04.azure-iot-hub.md)
+   - Building blocks
+     - Device-to-Cloud communication
+     - Cloud-to-Device communication
+       - Direct methods
+     - Device Twins
+       - Reported Properties Example
+       - Desired properties Example
+       - Back-end operations
+       - Device operations
+     - Module Twins
+1. [Golang](05.golang.md)
+   - Go
+     - Tour of Go
+1. [Demo](06.demo.md)
+   - Architecture
+   - Raspberry Pi 4
+     - Reading data from sensor
+       - gRPC
+       - Unix Domain Socket
+     - Systemd
+     - K3S
+       - Manifests
+     - Services
+       - THLooper
+       - IoTHubMQTT
+   - Azure
 1. [Q&A](07.q&a.md)
