--- a/02.azure-and-iot/02.iot.md
+++ b/02.azure-and-iot/02.iot.md
@@ -149,3 +149,12 @@ MQTT today is used in a wide variety of industries, such as automotive, manufact
 - https://azure.microsoft.com/en-us/overview/internet-of-things-iot/what-is-the-internet-of-things/
 - https://en.wikipedia.org/wiki/Advanced_Message_Queuing_Protocol
 - https://mqtt.org/
+
+## Agenda <!-- omit in toc -->
+
+1. [**IoT**](02.iot.md)
+1. [Azure IoT](03.azure-iot.md)
+1. [Azure IoT Hub](04.azure-iot-hub.md)
+1. [Golang](05.golang.md)
+1. [Demo](06.demo.md)
+1. [Q&A](07.q&a.md)
