--- a/02.azure-and-iot/03.azure-iot.md
+++ b/02.azure-and-iot/03.azure-iot.md
@@ -142,3 +142,12 @@ We also leverage hardware cryptographic capabilities, memory protection via Thre
 - https://azure.microsoft.com/en-us/overview/iot/industry/healthcare
 - https://azure.microsoft.com/en-us/overview/iot/industry/retail/
 - https://azure.microsoft.com/en-us/overview/iot/industry/transportation-and-logistics/
+
+## Agenda <!-- omit in toc -->
+
+1. [IoT](02.iot.md)
+1. [**Azure IoT**](03.azure-iot.md)
+1. [Azure IoT Hub](04.azure-iot-hub.md)
+1. [Golang](05.golang.md)
+1. [Demo](06.demo.md)
+1. [Q&A](07.q&a.md)
