--- a/02.azure-and-iot/05.golang.md
+++ b/02.azure-and-iot/05.golang.md
@@ -26,8 +26,8 @@ The first section covers basic syntax and data structures; the second discusses 
 Each section concludes with a few exercises so you can practice what you've learned.
 You can take the tour [online](https://tour.golang.org/welcome/1) or install it locally.
 
-
 ## References
+
 - Go
   - [https://golang.org/](https://golang.org/)
   - [https://go.googlesource.com/go](https://go.googlesource.com/go)
@@ -38,3 +38,12 @@ You can take the tour [online](https://tour.golang.org/welcome/1) or install it 
     - [https://golang.org/doc/faq](https://golang.org/doc/faq)
   - Tour of Go
     - [https://tour.golang.org/welcome/1](https://tour.golang.org/welcome/1)
+
+## Agenda <!-- omit in toc -->
+
+1. [IoT](02.iot.md)
+1. [Azure IoT](03.azure-iot.md)
+1. [Azure IoT Hub](04.azure-iot-hub.md)
+1. [**Golang**](05.golang.md)
+1. [Demo](06.demo.md)
+1. [Q&A](07.q&a.md)
