--- a/02.azure-and-iot/06.demo.md
+++ b/02.azure-and-iot/06.demo.md
@@ -4,15 +4,15 @@
 
 - [Architecture](#architecture)
 - [Raspberry Pi 4](#raspberry-pi-4)
-  - [Reading data from sensor](#reading-data-from-sensor)
-    - [gRPC](#grpc)
-    - [Unix Domain Socket](#unix-domain-socket)
-  - [Systemd](#systemd)
-  - [K3S](#k3s)
-    - [Manifests](#manifests)
-  - [Services](#services)
-    - [THLooper](#thlooper)
-    - [IoTHubMQTT](#iothubmqtt)
+	- [Reading data from sensor](#reading-data-from-sensor)
+		- [gRPC](#grpc)
+		- [Unix Domain Socket](#unix-domain-socket)
+	- [Systemd](#systemd)
+	- [K3S](#k3s)
+		- [Manifests](#manifests)
+	- [Services](#services)
+		- [THLooper](#thlooper)
+		- [IoTHubMQTT](#iothubmqtt)
 - [Azure](#azure)
 - [References](#references)
 
@@ -215,3 +215,12 @@ As a result we can find the data sent from the Raspberry Pi 4 into the Cosmos DB
 - https://systemd.io/
 - https://wiki.archlinux.org/title/Systemd
 - https://k3s.io/
+
+## Agenda <!-- omit in toc -->
+
+1. [IoT](02.iot.md)
+1. [Azure IoT](03.azure-iot.md)
+1. [Azure IoT Hub](04.azure-iot-hub.md)
+1. [Golang](05.golang.md)
+1. [**Demo**](06.demo.md)
+1. [Q&A](07.q&a.md)
