--- a/02.azure-and-iot/04.azure-iot-hub.md
+++ b/02.azure-and-iot/04.azure-iot-hub.md
@@ -164,3 +164,12 @@ We aim at supporting all the device twin functionality at module twin level by m
 - https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-devguide-jobs
 - https://docs.microsoft.com/en-us/azure/iot-hub/tutorial-device-twins
 - https://docs.microsoft.com/en-us/azure/iot-hub/iot-hub-live-data-visualization-in-power-bi
+
+## Agenda <!-- omit in toc -->
+
+1. [IoT](02.iot.md)
+1. [Azure IoT](03.azure-iot.md)
+1. [**Azure IoT Hub**](04.azure-iot-hub.md)
+1. [Golang](05.golang.md)
+1. [Demo](06.demo.md)
+1. [Q&A](07.q&a.md)
