--- a/02.azure-and-iot/06.demo.md
+++ b/02.azure-and-iot/06.demo.md
@@ -14,6 +14,10 @@
 		- [THLooper](#thlooper)
 		- [IoTHubMQTT](#iothubmqtt)
 - [Azure](#azure)
+	- [Device-To-Cloud Communication](#device-to-cloud-communication)
+	- [Cloud-To-Device Communication](#cloud-to-device-communication)
+		- [Direct Method](#direct-method)
+		- [Desired properties](#desired-properties)
 - [References](#references)
 
 ## Architecture
@@ -191,6 +195,8 @@ The code is available at [`src/thsock/cmd/iothubbroker/main.go`](src/thsock/cmd/
 
 ## Azure
 
+### Device-To-Cloud Communication
+
 ![image](./docs/unina-iot-architecture.png)
 
 Once the data is in Azure IoT, we automatically forward them to an Azure Event Hub adding a dedicated route into the IoT Hub's section `Message routing`.
@@ -206,6 +212,39 @@ Similarly, on the Event Hubs we used the wizard `Materialize data in Cosmos DB` 
 As a result we can find the data sent from the Raspberry Pi 4 into the Cosmos DB.
 
 ![image](./docs/06.cosmosdb-dataexplorer.jpeg)
+
+### Cloud-To-Device Communication
+
+#### Direct Method
+
+From the Azure IoT Hub, select the blade `Devices` and then select the device you want to send a request.
+In the table at the end of the page, select the module you want to communicate with and then click on `Direct method` in the top header.
+Fill the form and click on the button `Invoke Method` in the top header.
+
+![image](docs/06.iothub-cloud-to-device.jpeg)
+
+![image](docs/06.rpi4-cloud-to-device.jpeg)
+
+As you can see, the module `thlooper` received the message and changed the sample interval from 5000 ms to 3000 ms.
+
+#### Desired properties
+
+From the Azure IoT Hub, select the blade `Devices` and then select the device you want to send a request.
+In the table at the end of the page, select the module you want to communicate with and then click on `Module Identity Twin` in the top header.
+
+In the section `properties.desired` add a value `"delay": 3000` then hit `Save` in the top header.
+
+```json
+  	...
+    "properties": {
+        "desired": {
+            "delay": 3000,
+	...
+```
+
+![image](docs/06.rpi4-c2d-desired-properties.jpeg)
+
+As you can see, the module `thlooper` received the message and changed the sample interval from 5000 ms to 3000 ms.
 
 ## References
 
