--- a/02.azure-and-iot/01.presentation.md
+++ b/02.azure-and-iot/01.presentation.md
@@ -86,4 +86,6 @@ Since 1985 [Proge-Software](https://www.progesoftware.it/) produces high-technol
        - THLooper
        - IoTHubMQTT
    - Azure
+      - Device-To-Cloud Communication
+      - Cloud-To-Device Communication
 1. [Q&A](07.q&a.md)
