--- a/02.azure-and-iot/02.iot.md
+++ b/02.azure-and-iot/02.iot.md
@@ -28,6 +28,11 @@
 The Internet of Things (IoT) describes physical objects (or groups of such objects) with sensors, processing ability, software, and other technologies that connect and exchange data with other devices and systems over the Internet or other communications networks.
 Internet of things has been considered a misnomer because devices do not need to be connected to the public internet, they only need to be connected to a network and be individually addressable.
 
+The IoT is a giant network of connected things and people – all of which collect and share data about the way they are used and about the environment around them.
+Devices and objects with built in sensors are connected to an Internet of Things platform, which integrates data from the different devices and applies analytics to share the most valuable information with applications built to address specific needs.
+These powerful IoT platforms can pinpoint exactly what information is useful and what can safely be ignored.
+This information can be used to detect patterns, make recommendations, and detect possible problems before they occur.
+
 The field has evolved due to the convergence of multiple technologies, including ubiquitous computing, commodity sensors, increasingly powerful embedded systems, and machine learning.
 Traditional fields of embedded systems, wireless sensor networks, control systems, automation (including home and building automation), independently and collectively enable the Internet of things.
 In the consumer market, IoT technology is most synonymous with products pertaining to the concept of the "smart home", including devices and appliances (such as lighting fixtures, thermostats, home security systems, cameras, and other home appliances) that support one or more common ecosystems, and can be controlled via devices associated with that ecosystem, such as smartphones and smart speakers.
@@ -147,6 +152,7 @@ MQTT today is used in a wide variety of industries, such as automotive, manufact
 - https://en.wikipedia.org/wiki/Internet_of_things
 - https://en.wikipedia.org/wiki/Internet_of_Military_Things
 - https://azure.microsoft.com/en-us/overview/internet-of-things-iot/what-is-the-internet-of-things/
+- https://www.ibm.com/blogs/internet-of-things/what-is-the-iot/
 - https://en.wikipedia.org/wiki/Advanced_Message_Queuing_Protocol
 - https://mqtt.org/
 
