--- a/02.azure-and-iot/03.azure-iot.md
+++ b/02.azure-and-iot/03.azure-iot.md
@@ -4,7 +4,7 @@
 
 - [Azure IoT Hub](#azure-iot-hub)
 - [Azure IoT Hub Device Provisioning Service](#azure-iot-hub-device-provisioning-service)
-- [Azure IoT Hub Edge](#azure-iot-hub-edge)
+- [Azure IoT Edge](#azure-iot-edge)
 - [Azure Digital Twins](#azure-digital-twins)
 - [Azure IoT Central](#azure-iot-central)
 - [Azure Sphere](#azure-sphere)
@@ -37,7 +37,7 @@ There are many provisioning scenarios in which DPS is an excellent choice for ge
 - Reprovisioning based on a change in the device
 - Rolling the keys used by the device to connect to IoT Hub (when not using X.509 certificates to connect)
 
-## Azure IoT Hub Edge
+## Azure IoT Edge
 
 Azure IoT Edge moves cloud analytics and custom business logic to devices so that your organization can focus on business insights instead of data management.
 Scale out your IoT solution by packaging your business logic into standard containers, then you can deploy those containers to any of your devices and monitor it all from the cloud.
