--- a/02.azure-and-iot/03.azure-iot.md
+++ b/02.azure-and-iot/03.azure-iot.md
@@ -15,7 +15,7 @@
 
 ## Azure IoT Hub
 
-Azure IoT Hub is a managed service hosted in the cloud that acts as a central message hub for communication between an IoT application and its attached devices.
+Azure IoT Hub is a managed service that acts as a central message hub for communication between an IoT application and its attached devices.
 You can connect millions of devices and their backend solutions reliably and securely.
 Almost any device can be connected to an IoT hub.
 
