--- a/02.azure-and-iot/06.demo.md
+++ b/02.azure-and-iot/06.demo.md
@@ -213,6 +213,10 @@ As a result we can find the data sent from the Raspberry Pi 4 into the Cosmos DB
 
 ![image](./docs/06.cosmosdb-dataexplorer.jpeg)
 
+Finally, we can use [Power BI](https://app.powerbi.com/view?r=eyJrIjoiMzY4ZjA5NjYtM2ZkYS00NGZhLWI4NjEtZjZhNzgxMmUyNjAxIiwidCI6ImU2YWQ3NWJiLWU5MWEtNGM3ZC1hMDQ5LTg2MTIyZTViZDk3ZiIsImMiOjh9) to plot the data.
+
+![image](./docs/06.pbi-dashboard.jpeg)
+
 ### Cloud-To-Device Communication
 
 #### Direct Method
